Section 11: Networking in ARO/8. Understand and implement network policies/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-policy
  namespace: demo
spec:
  podSelector:
    matchLabels:
      run: server
  policyTypes:
    - Ingress
#    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
      ports:
        - port: 8080
          protocol: TCP
#  egress:
#    - to:
#        - ipBlock:
#            cidr: 147.75.40.148/32
